[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/btnFont.tres" type="FontFile" id=1]
[ext_resource path="res://Assets/Images/bg_underwater.png" type="Texture2D" id=2]
[ext_resource path="res://Scenes/Options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/btn_yellow.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Images/btn_yellow_disabled.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Fonts/Marujo.ttf" type="FontFile" id=6]
[ext_resource path="res://Scenes/MenuPlay/Scripts/MenuPlay.gd" type="Script" id=7]
[ext_resource path="res://Assets/Images/btn_arrow.png" type="Texture2D" id=8]
[ext_resource path="res://Assets/Sounds/menu_play.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/SFX/button_press.wav" type="AudioStream" id=10]

[sub_resource type="FontFile" id=1]
size = 100
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=2]
size = 70
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=3]
size = 70
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="FontFile" id=4]
size = 85
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="MenuPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="BgImage" type="Sprite2D" parent="."]
scale = Vector2( 1, 1.29286 )
texture = ExtResource( 2 )
centered = false

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.5
offset_right = 298.5
offset_bottom = 206.0

[node name="PlayerName" type="Label" parent="TitleContainer"]
offset_right = 597.0
offset_bottom = 101.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 1 )
align = 1

[node name="PlayerPoints" type="Label" parent="TitleContainer"]
offset_top = 105.0
offset_right = 597.0
offset_bottom = 206.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 1 )
text = "PUNTUACIÓN: 0"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -492.0
offset_top = -413.5
offset_right = 492.0
offset_bottom = 413.5

[node name="QuizContainer" type="CenterContainer" parent="VBoxContainer"]
offset_right = 984.0
offset_bottom = 273.0

[node name="BtnQuiz" type="TextureButton" parent="VBoxContainer/QuizContainer"]
offset_left = 247.0
offset_right = 737.0
offset_bottom = 273.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="LblQuiz" type="Label" parent="VBoxContainer/QuizContainer"]
offset_left = 392.0
offset_top = 97.0
offset_right = 592.0
offset_bottom = 176.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource( 1 )
text = "TRIVIA"

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 277.0
offset_right = 984.0
offset_bottom = 827.0

[node name="FirstContainer" type="VBoxContainer" parent="VBoxContainer/ButtonsContainer"]
offset_right = 490.0
offset_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer/FirstContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnFish" type="TextureButton" parent="VBoxContainer/ButtonsContainer/FirstContainer/FishContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="LblFish" type="Label" parent="VBoxContainer/ButtonsContainer/FirstContainer/FishContainer"]
offset_left = 66.0
offset_top = 97.0
offset_right = 423.0
offset_bottom = 176.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource( 1 )
text = "CORALIMPIO"

[node name="TimeContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer/FirstContainer"]
offset_top = 277.0
offset_right = 490.0
offset_bottom = 550.0

[node name="BtnTime" type="TextureButton" parent="VBoxContainer/ButtonsContainer/FirstContainer/TimeContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="LblTime" type="Label" parent="VBoxContainer/ButtonsContainer/FirstContainer/TimeContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2( 350, 150 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 2 )
text = "PESCANDO"
align = 1
valign = 1
autowrap = true

[node name="SecondContainer" type="VBoxContainer" parent="VBoxContainer/ButtonsContainer"]
offset_left = 494.0
offset_right = 984.0
offset_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObstacleContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer/SecondContainer"]
offset_right = 490.0
offset_bottom = 273.0

[node name="BtnObstacle" type="TextureButton" parent="VBoxContainer/ButtonsContainer/SecondContainer/ObstacleContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="LblObstacle" type="Label" parent="VBoxContainer/ButtonsContainer/SecondContainer/ObstacleContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2( 350, 150 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 3 )
text = "CARRERA
OBSTÁCULOS"
align = 1

[node name="CleanContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer/SecondContainer"]
offset_top = 277.0
offset_right = 490.0
offset_bottom = 550.0

[node name="BtnClean" type="TextureButton" parent="VBoxContainer/ButtonsContainer/SecondContainer/CleanContainer"]
offset_right = 490.0
offset_bottom = 273.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="LblClean" type="Label" parent="VBoxContainer/ButtonsContainer/SecondContainer/CleanContainer"]
offset_left = 70.0
offset_top = 61.0
offset_right = 420.0
offset_bottom = 211.0
custom_minimum_size = Vector2( 350, 150 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = SubResource( 4 )
text = "COCOSTA"
align = 1
valign = 1
autowrap = true

[node name="BtnBack" type="TextureButton" parent="."]
offset_right = 255.0
offset_bottom = 273.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="BGSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true

[node name="SoundPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="VBoxContainer/QuizContainer/BtnQuiz" to="." method="_on_BtnQuiz_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/FirstContainer/FishContainer/BtnFish" to="." method="_on_BtnFish_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/FirstContainer/TimeContainer/BtnTime" to="." method="_on_BtnTime_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/SecondContainer/ObstacleContainer/BtnObstacle" to="." method="_on_BtnObstacle_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/SecondContainer/CleanContainer/BtnClean" to="." method="_on_BtnClean_pressed"]
[connection signal="pressed" from="BtnBack" to="." method="_on_BtnBack_pressed"]
